@@ -497,6 +497,7 @@ all_tests =					\
   tests/du/one-file-system.sh			\
   tests/du/restore-wd.sh			\
   tests/du/slash.sh				\
+  tests/du/threshold.sh				\
   tests/du/trailing-slash.sh			\
   tests/du/two-args.sh				\
   tests/id/gnu-zero-uids.sh			\
